--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "f0315",
   "version": "1.0.0",
-  "description": "Hurnegyszog terulet felkerulet szamitasa ",
+  "description": "Hurnegyszog terulet szamitas",
   "main": "index.js",
   "scripts": {
     "start": "browser-sync start --config bs-config.json",
@@ -10,11 +10,12 @@
   "keywords": [
     "hurnegyszog",
     "terulet",
-    "felkerulet"
+    "szamitas"
   ],
   "author": "Dobány Norbert Andor",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "browser-sync": "^3.0.2"
   }
 }
