--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "f0315",
+  "name": "hurnegyter",
   "version": "1.0.0",
   "description": "Hurnegyszog terulet szamitas",
   "main": "index.js",
